# vae

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: base.yaml  config_on_restart.sh  install_poetry.sh  local.yaml  server.yaml  setup_env_on_creation.sh  setup_env_original.sh
scripts/: append_files.py  out.txt  program_output.txt  run_append.sh  train.sh  train_2.sh
src/: vae_draft_1.py
vae/: vae.py  vae_conv.py  vae_draft_1.py  vae_original.py  vae_sdxl.py  vae_video_run_1.py  wandb_delete_artifacts.py
vae/bak/: vae_conv.py  vae_sdxl.py  vae_sdxl_video_run.py
vae/models/: autoencoderkl.py  vae.py
vae/models_bak/: autoencoderkl.py  autoencoderkl2.py
vae/practice/: vae_conv.py
vae/training/: train.py
